--- a/src/app/pages/admin/pages/home/home-page-management.component.scss
+++ b/src/app/pages/admin/pages/home/home-page-management.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../shared/styles/admin-common.scss';
+
 .card-header {
   margin-bottom: 20px;
   border-bottom: 1px solid #e5e7eb;
