edit article page

--- a/src/app/pages/admin/articles/articles.component.html
+++ b/src/app/pages/admin/articles/articles.component.html
@@ -115,6 +115,7 @@
                     <basic-button
                       label="Edit"
                       [onWhite]="true"
+                      (buttonClick)="editArticle(article)"
                     />
                     <basic-button
                       label="Delete"
