--- a/src/app/pages/admin/projects/projects.component.scss
+++ b/src/app/pages/admin/projects/projects.component.scss
@@ -132,6 +132,18 @@
                   background: #fff3e0;
                   color: #f57c00;
                 }
+
+                &.featured {
+                  &.active {
+                    background: #fce4ec;
+                    color: #c2185b;
+                  }
+
+                  &.inactive {
+                    background: #f5f5f5;
+                    color: #757575;
+                  }
+                }
               }
 
               .date {
